EventArrayAdapter desmelled